stored the input in the title, author and pages in the object array after creating them in the constructor

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <dialog class="dialog">
         <div class="input-cont">
             <label>
-                Name:
-                <input type="text" name="name">
+                Title:
+                <input type="text" name="title" class="title">
             </label>
             <label>
                 Author:
-                <input type="text" name="Author">
+                <input type="text" name="Author" class="author">
             </label>
             <label>
                 Pages:
-                <input type="text" name="pages">
+                <input type="number" name="pages" class="pages">
             </label>
             <button class="close-dialog">Add</button>
         </div>
