--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
 <body>
     <button class="add-book">Add New Book</button>
     <dialog class="dialog">
+        <p>All fields with <span>*</span> must be filled</p>
         <div class="input-cont">
             <label>
-                Title:
-                <input type="text" name="title" class="title">
+                Title <span>*</span>:
+                <input type="text" name="title" class="title" required>
             </label>
             <label>
-                Author:
-                <input type="text" name="Author" class="author">
+                Author <span>*</span>:
+                <input type="text" name="Author" class="author" required>
             </label>
             <label>
-                Pages:
-                <input type="number" name="pages" class="pages">
+                Pages <span>*</span>:
+                <input type="number" name="pages" class="pages" title="Please fill out this field and pages must be greater than 0" required min="1">
             </label>
-            <button class="close-dialog">Add</button>
+
+            <div class="dialog-btns">
+                <button class="close-dialog">close</button>
+                <button class="add-dialog">Add</button>
+            </div>
+            
         </div>
         
     </dialog>
